# StatsBomb-mlb

./: .gitignore  README.md  STRUCTURE.md  actualizar_datos.py  mejorar_codigo.py  pyproject.toml  requirements.txt
.github/workflows/: fetch.yml  main.yml  train.yml
config/: data_sources.yaml  features.yaml  settings.yaml
docs/: API.md  ARCHITECTURE.md  FEATURES.md
notebooks/: exploration.ipynb
src/: fetch_mlb_espn.py  main.py
src/api/: mlb_client.py
src/etl/: clean_dataset.py  extract_mlb.py  transform.py
src/scraping/: scraper.py
src/utils/: logger.py
tests/: test_extract.py  test_features.py
