[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statsbomb-mlb"
version = "0.1.0"
description = "Professional ML pipeline for MLB data extraction, feature engineering, and predictive modeling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mz1823-Mex", email = "11demayo@proton.me"}
]
keywords = ["mlb", "baseball", "sabermetrics", "machine-learning", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.0",
    "requests>=2.32.3",
    "aiohttp>=3.9.5",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.4",
    "python-json-logger>=2.0.7",
    "pydantic>=2.7.4",
    "pyarrow>=16.1.0",
    "joblib>=1.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.3.0",
    "flake8>=7.0.0",
    "mypy>=1.11.0",
    "isort>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/Mz1823-Mex/StatsBomb-mlb"
Repository = "https://github.com/Mz1823-Mex/StatsBomb-mlb.git"
Issues = "https://github.com/Mz1823-Mex/StatsBomb-mlb/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
